# meson-example-lib

./: examplestuff.c  meson.build
